# gdbbattersaver

./: .gitignore  Cargo.toml  README.md  meson.build  meson_options.txt  rust-toolchain.toml
archlinux/: PKGBUILD
misc/: gdgbatterysaver.desktop  gdghelper
misc/about/: aboutapp.md  amd_performance.md  intel_pstate.md  kernel_cpu.md
src/: batterycommand.rs  config.rs  config.rs.in  main.rs  settings.rs
ui/: about.slint  appwindow.slint  batterysave.slint  global.slint
