[package]
name = "gdgbatterysaver"
version = "0.2.3"
authors = ["ShootingStarDragons <ShootingStarDragons@protonmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
glob = "0.3.0"
log = "0.4.17"
notify-rust = "4.6.0"
slint = "0.3.3"

tray-item = { version = "0.7.1", optional = true }
gtk = { version = "0.15.1", optional = true }

[build-dependencies]
slint-build = "0.3.3"

[features]
tray = ["gtk", "tray-item"]
