[package]
name = "gdgbatterysaver"
version = "0.2.4"
authors = ["ShootingStarDragons <ShootingStarDragons@protonmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
glob = "0.3.1"
log = "0.4.17"
notify-rust = "4.8.0"
slint = "1.0.0"

tray-item = { version = "0.7.1", optional = true }
gtk = { version = "0.15.1", optional = true }

[build-dependencies]
slint-build = "1.0.0"

[features]
tray = ["gtk", "tray-item"]
